--- a/config/database.yml
+++ b/config/database.yml
@@ -15,9 +15,10 @@ development:
 
 development:
   adapter: postgresql
-  host: localhost
-  username: user
-  database: app-dev
+  host: ec2-54-204-7-145.compute-1.amazonaws.com
+  username: fggzzmfjddfdog
+  password: kmKpJBgZDY9snaa0XRbruGRL54
+  database: d6b92gpg9pf0n7
   
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
