--- a/config/database.yml
+++ b/config/database.yml
@@ -15,10 +15,10 @@ development:
 
 development:
   adapter: postgresql
-  host: ec2-54-204-7-145.compute-1.amazonaws.com
-  username: fggzzmfjddfdog
-  password: kmKpJBgZDY9snaa0XRbruGRL54
-  database: d6b92gpg9pf0n7
+  host: ec2-54-204-30-115.compute-1.amazonaws.com
+  username: rvbqjsngkgjwsm
+  password: yP-0eTWMMGXVLW8biKpJozjYmH
+  database: d855ml6rvj5pj2
   
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
