--- a/config/database.yml
+++ b/config/database.yml
@@ -1,35 +1,14 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
 
-development:
-  <<: *default
-  database: db/development.sqlite3
-
-development:
+development: 
   adapter: postgresql
   host: ec2-54-204-30-115.compute-1.amazonaws.com
   username: rvbqjsngkgjwsm
   password: yP-0eTWMMGXVLW8biKpJozjYmH
   database: d855ml6rvj5pj2
-  
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test: &test
-  <<: *default
-  database: db/test.sqlite3
 
-production:
-  <<: *default
-  database: db/production.sqlite3
-
-cucumber:
-  <<: *test
+test:
+  adapter: postgresql
+  host: ec2-54-204-30-115.compute-1.amazonaws.com
+  username: rvbqjsngkgjwsm
+  password: yP-0eTWMMGXVLW8biKpJozjYmH
+  database: d855ml6rvj5pj2
