--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,16 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
 
-development:
-  <<: *default
-  database: db/development.sqlite3
+development: 
+  adapter: postgresql
+  host: ec2-54-204-7-145.compute-1.amazonaws.com
+  username: fggzzmfjddfdog
+  password: kmKpJBgZDY9snaa0XRbruGRL54
+  database: d6b92gpg9pf0n7
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: db/test.sqlite3
-
-production:
-  <<: *default
-  database: db/production.sqlite3
+test: &test
+  adapter: postgresql
+  host: ec2-54-204-7-145.compute-1.amazonaws.com
+  username: fggzzmfjddfdog
+  password: kmKpJBgZDY9snaa0XRbruGRL54
+  database: d855ml6rvj5pj2
+cucumber:
+  <<: *test
